--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@ p{
     font-weight: 600;
     text-align: justify;
 }
-h1{
+.head-line{
     padding-left: 2%;
     font-size: 50px;
     line-height: 50%;
     font-weight: 500;
 }
-section{
+.flexible{
     display: flex;
+    margin-bottom: 130px;
 }
 span{
     color: orangered;
@@ -42,4 +43,41 @@ span{
     font-size: 15px;
     color: slategrey;
     margin-top: 25px;
+}
+#centre{
+    text-align: center;
+    font-size: 35px;
+}
+.three-coloum{
+    padding-right: 20px;
+    padding-left: 20px;
+}
+.motivations{
+    margin-left: 50px;
+    margin-right: 50px;
+}
+.Wilson{
+    background-color: rgba(112, 128, 144, 0.548);
+    border-radius: 10px;
+    width: 90%;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+.Kael{
+    width: 90%;
+    background-color: rgba(64, 224, 208, 0.548);
+    border-radius: 10px;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+.Herbert{
+    width: 90%;
+    background-color: rgba(105, 90, 205, 0.486);
+    border-radius: 10px;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+.image{
+    width: 40%;
+    padding-top: 3%;
 }
