third section added

--- a/style.css
+++ b/style.css
@@ -10,8 +10,11 @@ p{
 .head-line{
     padding-left: 2%;
     font-size: 50px;
-    line-height: 50%;
+    line-height: 60%;
     font-weight: 500;
+}
+.left-border{
+    border-left: 4px solid orangered;
 }
 .flexible{
     display: flex;
@@ -30,13 +33,10 @@ span{
 .link-button{
     text-decoration: none;
     color: aliceblue;
+    font-weight: 500;
     background-image: linear-gradient(orangered, tomato);
     padding: 10px 35px;
     border-radius: 5px;
-}
-.left-border{
-    border-left: 5px solid orangered;
-    font-weight: 500;
 }
 #Scroll{
     font-family: Arial, Helvetica, sans-serif;
@@ -44,6 +44,7 @@ span{
     color: slategrey;
     margin-top: 25px;
 }
+
 #centre{
     text-align: center;
     font-size: 35px;
@@ -57,9 +58,9 @@ span{
     margin-right: 50px;
 }
 .Wilson{
+    width: 90%;
     background-color: rgba(112, 128, 144, 0.548);
     border-radius: 10px;
-    width: 90%;
     margin-right: 15px;
     margin-left: 15px;
 }
@@ -80,4 +81,22 @@ span{
 .image{
     width: 40%;
     padding-top: 3%;
+}
+
+.left-side{
+    width: 45%;
+}
+.left-side img{
+    width: 55%;
+    margin-left: 35%;
+}
+.right-side{
+    width: 60%;
+    margin-right: 5%;
+}
+.express-yourself{
+    background-image: url(images/background.png);
+    background-repeat: no-repeat;
+    background-size: 17%;
+    background-position: left;
 }
