--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ body{
     font-family: 'Righteous', cursive;
 }
 p{
-    font-family: 'Moon Dance', cursive;
+    font-family: 'Oswald', sans-serif;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 400;
     text-align: justify;
 }
 .head-line{
@@ -23,17 +23,17 @@ p{
 span{
     color: orangered;
 }
-.two-coloum{
+.two-column{
     width: 50%;
     padding-left: 8%;
 }
-.two-coloum img{
+.two-column img{
     width: 70%;
 }
 .link-button{
     text-decoration: none;
     color: aliceblue;
-    font-weight: 500;
+    font-weight: 400;
     background-image: linear-gradient(orangered, tomato);
     padding: 10px 35px;
     border-radius: 5px;
@@ -49,7 +49,7 @@ span{
     text-align: center;
     font-size: 35px;
 }
-.three-coloum{
+.three-column{
     padding-right: 20px;
     padding-left: 20px;
 }
@@ -89,6 +89,7 @@ span{
 .left-side img{
     width: 55%;
     margin-left: 35%;
+    margin-top: 7%;
 }
 .right-side{
     width: 60%;
@@ -98,5 +99,35 @@ span{
     background-image: url(images/background.png);
     background-repeat: no-repeat;
     background-size: 17%;
-    background-position: left;
+    background-position-x: 0%;
+    background-position-y: 100%;
+}
+.limit-img{
+    margin-top: 5%;
+}
+.potential{
+    background-image: url(images/background-2.png);
+    background-repeat: no-repeat;
+    background-size: 15%;
+    background-position-x: 93%;
+    background-position-y: 100%;
+}
+footer{
+    width: 100%;
+    color: snow;
+    background-color: black;
+
+}
+#upper-footer{
+    text-align: center;
+    font-family: 'Righteous', cursive;
+    font-size: 30px;
+    font-weight: 400;
+    padding-top: 20px;
+
+}
+#lower-footer{
+    text-align: center;
+    padding-bottom: 20px;
+    font-size: 20px;
 }
